1) datepicker CSS issue fixed foe tablet device 2) modify search box z-index issue solved

--- a/app/Styles/Style.css
+++ b/app/Styles/Style.css
@@ -303,8 +303,7 @@ input.form-control[type="number"] {
 .header-box {
     background-color: #f5f5f5;
     padding: 15px 0;
-    position: relative;
-    z-index: 1000;
+    position: relative;    
 }
 /*
 .home-btn, .user-btn {
@@ -381,8 +380,8 @@ input.form-control[type="number"] {
 .logo {
     float: right;
     position: relative;
-    z-index: 1;
-    width: 100%;
+    z-index: 11;
+    width: 100%;    
 }
 
     .logo img {
@@ -1559,7 +1558,7 @@ i.calendar.active, .input-box:hover i.calendar {
     position: absolute;
     right: 0;
     bottom: 0px;
-    z-index: 999;
+    z-index: 10;
 }
 
 
@@ -2106,6 +2105,7 @@ i.calendar.active, .input-box:hover i.calendar {
         right: 0 !important;
         margin: auto;
         width: 240px;
+        min-width:280px;
         -moz-transform: translateY(-50%);
         -webkit-transform: translateY(-50%);
         -o-transform: translateY(-50%);
@@ -2403,7 +2403,7 @@ i.calendar.active, .input-box:hover i.calendar {
     }
 
     .calendar-size .dropdown-menu {
-        min-width: 240px;
+        min-width: 240px !important;
     }
 
         .calendar-size .dropdown-menu li table td, .calendar-size .dropdown-menu li table th {
